--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
    "dependencies": {
       "ejs": "^2.6.1",
       "express": "^4.17.0",
-      "morgan": "^1.9.1"
+      "morgan": "^1.9.1",
+      "save": "^2.4.0"
    }
 }
